# ariel

./: NAM_CRASH_FIX.md  NAM_PLUGIN_FIXES.md  README.md  TODO.md  What-works.md  ariel  ariel-console.bat  ariel.desktop  ariel.spec  build-windows-console.sh  build-windows.sh  color-themes.md  console_test.c  memory_test.c  meson.build  package-windows.sh  struct_test.c  test_file_params.py  test_ratatouille_params.py  validation_report.sh
.github/: copilot-instructions.md
.github/workflows/: build-windows.yml
cross/: windows-x86_64.txt
data/: ariel.appdata.xml  ariel.desktop.in
docs/: ATOM_MESSAGING.md  BUFFER_OVERFLOW_FIX.md  CSS_THEME.md  FILE_DIALOG_IMPLEMENTATION.md  FINAL_STATUS_REPORT.md  GLIB_ERROR_FIX.md  Issues.md  LOGGING.md  LV2_FEATURES.md  LV2_LOG_EXTENSION.md  LV2_PARAMETER_FILE_CHOOSER.md  LV2_WORKER_RESPONSE.md  LV2_WORKER_SCHEDULE.md  MEMORY_CORRUPTION_FIX.md  NEURAL_AMP_MODELER_FIX.md  PARAMETER_DETECTION_FIX.md  WINDOWS_BUILD.md  WINDOWS_CONSOLE_OUTPUT.md  WINDOWS_CRASH_FIX.md  backtrace.txt  dark-color-themes.md  ncurses-cli.md  packages.md  windows-audio.md  windows-build.md
examples/: logging_example.c
include/: ariel.h  ariel_log.h
src/: ariel_cli.c  ariel_log.c  main.c  minimal_test.c
src/audio/: active_plugin.c  config.c  engine.c  jack_client.c  plugin_manager.c  wasapi_client.c
src/ui/: active_plugins.c  active_plugins.c.backup  mixer.c  parameter_controls.c  plugin_list.c  settings.c  transport.c  window.c
themes/: README.md  arc.css  ariel-dark.css  atomic.css  ayu-dark.css  badwolf-dark.css  blackboard.css  charcoal.css  cobalt2.css  coral.css  darcula.css  dark.css  default.css  dracula.css  forest.css  gold.css  gruvbox-dark.css  lavender.css  material-darker.css  midnight.css  mint.css  nord.css  ocean.css  one-dark.css  rose.css  sky-blue.css  slate.css  soft-pink.css  solarized-dark.css  spacegray.css  sunset.css  teal.css  theme-manager.sh  tomorrow-night.css  violet.css  zenburn.css
win32/: lilv-0.pc  lv2.pc  serd-0.pc  sord-0.pc  sratom-0.pc  zix-0.pc
